# firefly-report-bot

./: .gitignore  Dockerfile  README.md  pyproject.toml  settings_example.yaml
.github/workflows/: code_style.yml  docker_push.yaml
firefly_report_bot/: __main__.py  app.py  config.py  reports.py
firefly_report_bot/bot/: __init__.py  bot.py  keyboards.py
firefly_report_bot/bot/routers/: accounts.py  base.py  budget.py  categories.py  report.py  root.py  transactions.py
firefly_report_bot/client/: __init__.py  classes.py  client.py  enums.py
firefly_report_bot/client/models/: accounts.py  base.py  budgets.py  categories.py  transactions.py
