[tool.poetry]
name = "firefly-report-bot"
version = "0.1.1"
description = ""
authors = ["Alexey Pichugin <a.o.pichugin@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
aiogram = "^3.10.0"
pydantic = "^2.8.2"
pyyaml = "^6.0.1"
pydantic-settings = "^2.3.4"
aiohttp = "^3.9.5"
ujson = "^5.10.0"
loguru = "^0.7.2"
apscheduler = "^3.10.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"
bandit = "^1.7.9"
types-ujson = "^5.10.0.20240515"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
